--- a/data/index.html
+++ b/data/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MK-312WS</title>
+    <title>%HOSTNAME%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="AlexaLogo.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="topnav">
-        <h1>MK-312WS</h1>
+        <h1>%HOSTNAME%</h1>
     </div>
     <div class="content">
         <div class="card-grid">
