neugetan der modi

--- a/data/index.html
+++ b/data/index.html
@@ -34,58 +34,53 @@
                 <p class="state"><span id="slider_m_value"></span> &percnt;</p>
             </div>
 			<div class="card">
-                <p class="card-title">Mode</p>
-                <p class="switch">
-				<div style="display: inline-block; text-align: left;">
-				
-					<input type="radio" onclick="update_radio(this)" name="mode" id="waves" value="waves" checked><label for="waves">Waves</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="stroke" value="stroke"><label for="stroke">Stroke</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="climb" value="climb"><label for="climb">Climb</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="combo" value="combo"><label for="combo">Combo</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="intense" value="intense"><label for="intense">Intense</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="rythm" value="rythm"><label for="rythm">Rythm</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="audio1" value="audio1"><label for="audio1">Audio 1</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="audio2" value="audio2"><label for="audio2">Audio 2</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="audio3" value="audio3"><label for="audio3">Audio 3</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="split" value="split"><label for="split">Split</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="random1" value="random1"><label for="random1">Random 1</label><br>	
-					<input type="radio" onclick="update_radio(this)" name="mode" id="random2" value="random2"><label for="random2">Random 2</label><br>
-
-              
-				</div>
-				  </p>
-            </div>
-			<div class="card">
-                <p class="card-title">Mode</p>
-                <p class="switch">
-				<div style="display: inline-block; text-align: left;">
-			
-					<input type="radio" onclick="update_radio(this)" name="mode" id="toggle" value="toggle"><label for="toggle">Toggle</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="orgasm" value="orgasm"><label for="orgasm">Orgasm</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="torment" value="torment"><label for="torment">Torment</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="phase1" value="phase1"><label for="phase1">Phase 1</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="phase2" value="phase2"><label for="phase2">Phase 2</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="phase3" value="phase3"><label for="phase3">Phase 3</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user1" value="user1"><label for="user1">User 1</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user2" value="user2"><label for="user2">User 2</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user3" value="user3"><label for="user3">User 3</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user4" value="user4"><label for="user4">User 4</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user5" value="user5"><label for="user5">User 5</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user6" value="user6"><label for="user6">User 6</label><br>
-					<input type="radio" onclick="update_radio(this)" name="mode" id="user7" value="user7"><label for="user7">User 7</label><br>
-			
-			
-			</div>
-				  </p>
-            </div>
-			
-			<div class="card">
                 <p class="card-title">Disable Input</p>
                 <p class="switch">
-                    <input type="radio" onclick="update_radio(this)" name="adc" id="adc_on" value="adc_on" checked><label for="adc_on">Input enabled</label><br>
-					<input type="radio" onclick="update_radio(this)" name="adc" id="adc_off" value="adc_off"><label for="adc_off">Input disabled</label><br>
+                    <input type="radio" onclick="update_radio(this)" name="adc" id="adc_on" value="on" checked><label for="adc_on">Input enabled</label><br>
+					<input type="radio" onclick="update_radio(this)" name="adc" id="adc_off" value="off"><label for="adc_off">Input disabled</label><br>
                 </p>
             </div>
+			<div class="card">
+				<p class="card-title">Mode</p>
+				<p class="switch">
+					<div style="display: inline-block; text-align: left;">
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x76" value="0x76" checked><label for="mode_0x76">Waves</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x77" value="0x77"><label for="mode_0x77">Stroke</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x78" value="0x78"><label for="mode_0x78">Climb</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x79" value="0x79"><label for="mode_0x79">Combo</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7a" value="0x7a"><label for="mode_0x7a">Intense</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7b" value="0x7b"><label for="mode_0x7b">Rythm</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7c" value="0x7c"><label for="mode_0x7c">Audio 1</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7d" value="0x7d"><label for="mode_0x7d">Audio 2</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7e" value="0x7e"><label for="mode_0x7e">Audio 3</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7f" value="0x7f"><label for="mode_0x7f">Split</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x80" value="0x80"><label for="mode_0x80">Random 1</label><br>	
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x81" value="0x81"><label for="mode_0x81">Random 2</label><br>
+					</div>
+				</p>
+			</div>
+			<div class="card">
+				<p class="card-title">Mode</p>
+				<p class="switch">
+					<div style="display: inline-block; text-align: left;">
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x82" value="0x82"><label for="mode_0x82">Toggle</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x83" value="0x83"><label for="mode_0x83">Orgasm</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x84" value="0x84"><label for="mode_0x84">Torment</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x85" value="0x85"><label for="mode_0x85">Phase 1</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x86" value="0x86"><label for="mode_0x86">Phase 2</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x87" value="0x87"><label for="mode_0x87">Phase 3</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x88" value="0x88"><label for="mode_0x88">User 1</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x89" value="0x89"><label for="mode_0x89">User 2</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x8a" value="0x8a"><label for="mode_0x8a">User 3</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x8b" value="0x8b"><label for="mode_0x8b">User 4</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x8c" value="0x8c"><label for="mode_0x8c">User 5</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x8d" value="0x8d"><label for="mode_0x8d">User 6</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x8e" value="0x8e"><label for="mode_0x8e">User 7</label><br>
+					</div>
+				</p>
+			</div>
+			
+			
         </div>
     </div>
     <script src="script.js"></script>
