--- a/data/index.html
+++ b/data/index.html
@@ -90,7 +90,7 @@
                     <input type="range" onchange="update_slider(this)" id="ramp_time" min="0" max="100" step="1" value ="0" class="slider">
                 </p>
                 <p class="state"><span id="ramp_time_value"></span> &percnt;</p>
-                <input type="button" onchange="update_slider(this)" id="ramp_start" value="Start Ramp" class="button">
+                <input type="button" onclick="date_button(this)" name="ramp_start" id="ramp_start" value="Start Ramp" class="button">
             </div>
 			 <div class="card">
                 <p class="card-title">Battery</p>
