--- a/data/index.html
+++ b/data/index.html
@@ -52,10 +52,21 @@
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7b" value="0x7b"><label for="mode_0x7b">Rythm</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7c" value="0x7c"><label for="mode_0x7c">Audio 1</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7d" value="0x7d"><label for="mode_0x7d">Audio 2</label><br>
+					</div>
+				</p>
+			</div>
+			<div class="card">
+				<p class="card-title">Mode</p>
+				<p class="switch">
+					<div style="display: inline-block; text-align: left;">			
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7e" value="0x7e"><label for="mode_0x7e">Audio 3</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x7f" value="0x7f"><label for="mode_0x7f">Split</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x80" value="0x80"><label for="mode_0x80">Random 1</label><br>	
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x81" value="0x81"><label for="mode_0x81">Random 2</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x82" value="0x82"><label for="mode_0x82">Toggle</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x83" value="0x83"><label for="mode_0x83">Orgasm</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x84" value="0x84"><label for="mode_0x84">Torment</label><br>
+						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x85" value="0x85"><label for="mode_0x85">Phase 1</label><br>
 					</div>
 				</p>
 			</div>
@@ -63,11 +74,8 @@
 				<p class="card-title">Mode</p>
 				<p class="switch">
 					<div style="display: inline-block; text-align: left;">
-						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x82" value="0x82"><label for="mode_0x82">Toggle</label><br>
-						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x83" value="0x83"><label for="mode_0x83">Orgasm</label><br>
-						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x84" value="0x84"><label for="mode_0x84">Torment</label><br>
-						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x85" value="0x85"><label for="mode_0x85">Phase 1</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x86" value="0x86"><label for="mode_0x86">Phase 2</label><br>
+
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x87" value="0x87"><label for="mode_0x87">Phase 3</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x88" value="0x88"><label for="mode_0x88">User 1</label><br>
 						<input type="radio" onclick="update_radio(this)" name="mode" id="mode_0x89" value="0x89"><label for="mode_0x89">User 2</label><br>
@@ -79,7 +87,7 @@
 					</div>
 				</p>
 			</div>
-			<div class="card">
+			<!---<div class="card">
                 <p class="card-title">Ramp level</p>
                 <p class="switch">
                     <input type="range" onchange="update_slider(this)" id="ramp_level" min="0" max="100" step="1" value ="0" class="slider">
@@ -90,12 +98,15 @@
                     <input type="range" onchange="update_slider(this)" id="ramp_time" min="0" max="100" step="1" value ="0" class="slider">
                 </p>
                 <p class="state"><span id="ramp_time_value"></span> &percnt;</p>
-                <input type="button" onclick="update_button(this)" name="ramp_start" id="ramp_start" value="Start Ramp" class="button">
-            </div>
+                
+            </div> 
+            -->
 			 <div class="card">
                 <p class="card-title">Battery</p>
-                
                 <p class="state"><span id="battery_value"></span> &percnt;</p>
+				<p class="card-title">Ramp</p>
+				<input type="button" onclick="update_button(this)" name="ramp_start" id="ramp_start" value="Start Ramp" class="button">
+
             </div>
 			
         </div>
