--- a/data/index.html
+++ b/data/index.html
@@ -12,27 +12,43 @@
     </div>
     <div class="content">
         <div class="card-grid">
+		
             <div class="card">
                 <p class="card-title">Power A</p>
                 <p class="switch">
                     <input type="range" onchange="update_slider(this)" id="slider_a" min="0" max="99" step="1" value ="0" class="slider">
                 </p>
-                <p class="state"><span id="slider_a_value"></span> &percnt;</p>
+                <p class="state">
+					<input type="button" onclick="update_button(this)" name="dec_a" id="dec_a" value="&nbsp;-1&nbsp;" class="button">
+					<span id="slider_a_value"></span> &percnt;
+					<input type="button" onclick="update_button(this)" name="inc_a" id="inc_a" value="&nbsp;+1&nbsp;" class="button">
+				</p>
             </div>
+			
             <div class="card">
                 <p class="card-title">Power B</p>
                 <p class="switch">
                     <input type="range" onchange="update_slider(this)" id="slider_b" min="0" max="99" step="1" value ="0" class="slider">
                 </p>
-                <p class="state"><span id="slider_b_value"></span> &percnt;</p>
+				<p class="state">
+					<input type="button" onclick="update_button(this)" name="dec_b" id="dec_b" value="&nbsp;-1&nbsp;" class="button">
+					<span id="slider_b_value"></span> &percnt;
+					<input type="button" onclick="update_button(this)" name="inc_b" id="inc_b" value="&nbsp;+1&nbsp;" class="button">
+				</p>
             </div>
+			
             <div class="card">
                 <p class="card-title">Multi Adjust</p>
                 <p class="switch">
                     <input type="range" onchange="update_slider(this)" id="slider_m" min="0" max="99" step="1" value ="0" class="slider">
                 </p>
-                <p class="state"><span id="slider_m_value"></span> &percnt;</p>
+                <p class="state">
+					<input type="button" onclick="update_button(this)" name="dec_m" id="dec_m" value="&nbsp;-1&nbsp;" class="button">
+					<span id="slider_m_value"></span> &percnt;
+					<input type="button" onclick="update_button(this)" name="inc_m" id="inc_m" value="&nbsp;+1&nbsp;" class="button">
+				</p>
             </div>
+			
 			<div class="card">
                 <p class="card-title">Disable Input</p>
                 <p class="switch">
@@ -40,6 +56,7 @@
 					<input type="radio" onclick="update_radio(this)" name="adc" id="adc_off" value="off"><label for="adc_off">Input disabled</label><br>
                 </p>
             </div>
+			
 			<div class="card">
 				<p class="card-title">Mode</p>
 				<p class="switch">
@@ -106,6 +123,8 @@
                 <p class="state"><span id="battery_value"></span> &percnt;</p>
 				<p class="card-title">Ramp</p>
 				<input type="button" onclick="update_button(this)" name="ramp_start" id="ramp_start" value="Start Ramp" class="button">
+				<p class="card-title">Emergency stop</p>
+				<input type="button" onclick="update_button(this)" name="emergency_stop" id="emergency_stop" value="Emergency stop" class="button">
 
             </div>
 			
