baut so, bt tut aber nicht. drueckt mir alles drueckbare für ota

--- a/data/btmode.html
+++ b/data/btmode.html
@@ -7,17 +7,5 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<form action='/config_post' method = 'post'>
-  <label>hostname</label>
-  <input type = 'text' name = 'hostname'/>
-  <br/>
-  <label>ssid</label>
-  <input type = 'text' name = 'ssid'/>
-  <br/>
-  <label>password</label>
-  <input type = 'text' name = 'password'/>
-  <br/>
-  <input type='submit' value='submit'>
-  </form>
-  </body>
+BT-Mode is active. Disble it on the config screen.
 </html>
