--- a/data/index.html
+++ b/data/index.html
@@ -54,10 +54,10 @@
             </div>
 			
 			<div class="card">
-                <p class="card-title">Disable Input</p>
+                <p class="card-title">Input Selection</p>
                 <p class="switch">
-                    <input type="radio" onclick="update_radio(this)" name="adc" id="adc_on" value="on" checked><label for="adc_on">Input enabled</label><br>
-					<input type="radio" onclick="update_radio(this)" name="adc" id="adc_off" value="off"><label for="adc_off">Input disabled</label><br>
+                    <input type="radio" onclick="update_radio(this)" name="adc" id="adc_on" value="on" checked><label for="adc_on">Device enabled</label><br>
+					<input type="radio" onclick="update_radio(this)" name="adc" id="adc_off" value="off"><label for="adc_off">Webinterface enabled</label><br>
                 </p>
             </div>
 			
