btmode working, version info via html

--- a/data/btmode.html
+++ b/data/btmode.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MK-312WS</title>
+    <title>%HOSTNAME%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="AlexaLogo.png">
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-BT-Mode is active. Disble it on the config screen.
+BT-Mode is active. Disble it on the <a href="config">config</a> screen.
+<br><br> Firmware Version: %FWVERSION%
+ HTML version: b2
 </html>
