--- a/data/config.html
+++ b/data/config.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MK-312WS</title>
+    <title>%HOSTNAME%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="AlexaLogo.png">
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -22,5 +22,8 @@
   <br/>
   <input type='submit' value='submit'>
   </form>
+  <br><br>
+  Firmware Version: %FWVERSION%
+  HTML version: c2
   </body>
 </html>
