--- a/data/index.html
+++ b/data/index.html
@@ -134,6 +134,8 @@
 			
         </div>
     </div>
+   Firmware Version: %FWVERSION%
+  HTML version: i2
     <script src="script.js"></script>
 </body>
 </html>
